--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{REPOSITORY}}/${{ github.repository }}
+          images: ${{ env.REPOSITORY }}/${{ github.repository }}
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest
