--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,10 +4,6 @@ on:
   workflow_dispatch:
     tags:
       - 'v*'
-env:
-  NAMESPACE: arbajt
-  REGISTRY: docker.io
-
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -26,7 +22,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ github.repository }}
+          images: docker.io/arbajt/memsipiju
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest
