--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: Push To Dockerhub
+name: Push Version
 
 on:
   workflow_dispatch:
@@ -23,9 +23,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: docker.io/arbajt/memsipiju
-          tags: |
-            type=semver,pattern={{version}}
-            type=raw,value=latest
+          tags: type=semver,pattern={{version}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
