--- a/.github/workflows/push-version.yml
+++ b/.github/workflows/push-version.yml
@@ -1,9 +1,10 @@
 name: Push Version
 
 on:
-  workflow_dispatch:
+  push:
     tags:
-      - 'v*'
+      - '*' 
+      
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
